[gd_scene load_steps=4 format=3 uid="uid://clnuxvf3lyana"]

[ext_resource type="Script" path="res://Scenes/ModPanel/mod_panel.gd" id="1_7qdrt"]
[ext_resource type="Script" path="res://Scenes/ModPanel/CheckBoxHitbox.gd" id="2_rl0ur"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o12b3"]
bg_color = Color(1, 1, 1, 1)

[node name="ModPanel" type="Panel"]
auto_translate_mode = 1
self_modulate = Color(0.819608, 0.0862745, 0.0862745, 1)
custom_minimum_size = Vector2(0, 30)
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
size_flags_vertical = 0
mouse_default_cursor_shape = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_o12b3")
script = ExtResource("1_7qdrt")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ModTitleText" type="RichTextLabel" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 23)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 0.25
mouse_filter = 2
text = "Hello"
autowrap_mode = 0

[node name="VSeparator" type="VSeparator" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="ModPathText" type="RichTextLabel" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
custom_minimum_size = Vector2(0, 23)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
mouse_filter = 2
text = "Hello"
autowrap_mode = 0

[node name="VSeparator2" type="VSeparator" parent="MarginContainer/HBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
mouse_filter = 2

[node name="CheckBoxHitbox" type="Control" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25
script = ExtResource("2_rl0ur")

[node name="CheckBox" type="CheckBox" parent="MarginContainer/HBoxContainer/CheckBoxHitbox"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.0
offset_top = -12.0
offset_right = 12.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
focus_mode = 0
mouse_filter = 2
button_pressed = true
alignment = 1
icon_alignment = 1

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="MarginContainer/HBoxContainer/CheckBoxHitbox" to="MarginContainer/HBoxContainer/CheckBoxHitbox" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/HBoxContainer/CheckBoxHitbox" to="MarginContainer/HBoxContainer/CheckBoxHitbox" method="_on_mouse_exited"]
